--- a/LeaveManagementSystem/Views/Department/AddDepartment.cshtml
+++ b/LeaveManagementSystem/Views/Department/AddDepartment.cshtml
@@ -18,14 +18,9 @@
 
         <small class="department-exist text-danger"></small>
         <button type="submit" style="float:right;" class="btn btn-primary">Add</button>
-        <a href="/department/index" style="float:left" class="btn btn-primary">back</a>
+        <a href="/department/departmentlist" style="float:left" class="btn btn-primary">back</a>
 
     }
-
-
-
-
-
 </div>
 
 <script>
