--- a/LeaveManagementSystem/Views/Employee/ListEmployee.cshtml
+++ b/LeaveManagementSystem/Views/Employee/ListEmployee.cshtml
@@ -20,7 +20,7 @@
                <div class="container my-2">
                            <div class="container my-5">
                                <p class="my-5">
-                                   <a href="/employee/addnewemployee" class="btn btn-primary">
+                                   <a href="/employee/addemployee" class="btn btn-primary">
                                        <i class="fas fa-user-plus ml-2"> Add Employee </i>
                                    </a>
                                </p>
