--- a/LeaveManagementSystem/Views/Shared/_Layout.cshtml
+++ b/LeaveManagementSystem/Views/Shared/_Layout.cshtml
@@ -54,7 +54,7 @@
                     <li><a href="/Account/updatepassword">Password</a></li>
                     <li @*class="hide-element"*@><a href="/employee/listEmployee">Employee</a></li>
                     <li @*class="hide-element"*@><a href="/designation/ListDesignation"> Designation</a></li>
-                    <li @*class="hide-element"*@><a href="/department/index">Department</a></li>
+                    <li @*class="hide-element"*@><a href="/department/departmentlist">Department</a></li>
 
                 </ul><br>
 
@@ -65,15 +65,10 @@
                 <hr>
                 <a href="/account/logout" class="btn btn-danger" style="float:right">Log out</a>
 
-
                 @{
                     Html.RenderPartial("_EmployeePartialView");
                 }
-                @RenderBody()
-
-                @*---------------------renderbody---------------------------------*@
-
-
+                                         @RenderBody()
 
                 </p>
 
@@ -83,7 +78,7 @@
         </div>
     </div>
 
-    <footer class="container-fluid" style="text-align:center;">
+    <footer class="container-fluid" style="text-align:center;margin-top:24%;">
         <p>&#169; companyname 2020. All Rights Reserved. Privacy & Cookies Policy</p>
     </footer>
 
